<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/duracionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/caratula"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:contentDescription="@string/desc_caratula"
            android:padding="8sp"
            app:srcCompat="@drawable/tenet_principal" />

        <TextView
            android:id="@+id/fechaEstreno"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:text="@string/fechaEstreno" />

        <TextView
            android:id="@+id/estrenofragment"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:text="@string/duracion" />

        <TextView
            android:id="@+id/duracionPelicula"
            android:layout_width="149dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>